[project]
name = "streamPush"
version = "0.1.0"
description = "Feishu news push agent with LLM summarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "python-dotenv>=1.1.0",
  "socksio>=1.0.0",
]

[project.scripts]
streampush-news = "app.runner:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
